# stackbox

./: .editorconfig  .env.example  .env.schema  .gitignore  .stackbox-context.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  biome.json  lefthook.yml  package-lock.json  package.json  stackbox.js  tsconfig.json  turbo.json  vite.config.ts
.calus/: SKILLS.md
.calus/mcp/: index.js  package.json
.calus/skills/agents/: env-vars.md  memory-signals.md  session-protocol.md  state-format.md  worktree-conventions.md.md
.calus/skills/git/: branch-strategy.md  commit.md  session-summary.md  worktree.md
.calus/skills/github/: code-review.md  create-pr.md  respond-to-pr-comments.md
.calus/skills/planning/: create-plan.md  task-breakdown.md
.claude/: mcp.json  settings.local.json
.codex/: mcp.json
.cursor/: mcp.json
.cursor/rules/: stackbox.md
.gemini/: mcp.json
.github/: CODEOWNERS  SECURITY.md  labeler-config.yml  mcp.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deps-audit.yml  labeler.yml  release.yml  size-check.yml  stale.yml  updater-check.yml
.opencode/: mcp.json
.stackbox/agents/: 2c5105de-c7c6-486f-bcc6-03563cc81112.md
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  frontend.txt  index.css  index.html
desktop/src-tauri/: Cargo.toml  backend.txt  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  proxy.rs  state.rs
desktop/src/core/: BrowsePane.tsx  FileViewerPane.tsx  RunPane.tsx
desktop/src/panels/: BrowserPanel.tsx  FileChangeList.tsx  FileTreePanel.tsx  Filestructurepanel.tsx  Gitworktreepanel.tsx  MemoryPanel.tsx  Workspacepanel.tsx
desktop/src/runbox/: DiffViewer.tsx  PaneTree.tsx  WorkspaceTabBar.tsx  WorkspaceView.tsx
desktop/src/shared/: Notificationsystem.tsx  Titlebar.tsx  constants.ts  hooks.ts  icons.tsx  types.ts
desktop/src/sidebar/: CreateRunboxModal.tsx  OpenInEditorButton.tsx  Sidebar.tsx
docs/: index.html  install.sh
kernel/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
kernel/.cargo/: config.toml
kernel/capabilities/: default.json  webview.json
kernel/icons/: icon.icns
kernel/installer/linux/: stackbox.appdata.xml  stackbox.desktop
kernel/installer/macos/: Info.plist  entitlements.plist
kernel/installer/windows/wix/: main.wxs
kernel/src/: config.rs  error.rs  health.rs  lib.rs  logger.rs  proxy.rs  state.rs
kernel/src/agent/: context.rs  embedder.rs  globals.rs  injector.rs  kind.rs  mod.rs  scorer.rs  supercontext.rs
kernel/src/browser/: mod.rs  webview.rs
kernel/src/commands/: clipboard.rs  db.rs  fs.rs  memory.rs  mod.rs  notification.rs  pty.rs  system.rs  updater.rs  watcher.rs
kernel/src/conflict/: mod.rs
kernel/src/db/: branches.rs  events.rs  layout.rs  mod.rs  runboxes.rs  schema.rs  sessions.rs
kernel/src/docker/: mod.rs
kernel/src/git/: api.rs  cleanup.rs  commands.rs  diff.rs  inject.rs  log.rs  mod.rs  repo.rs  watcher.rs  webhook.rs
kernel/src/mcp/: config.rs  handler.rs  mod.rs  tools.rs
kernel/src/memory/: decision.rs  filesystem.rs  mod.rs  schema.rs  sleep.rs  store.rs
kernel/src/pty/: detection.rs  mod.rs  watcher.rs  writer.rs
kernel/src/server/: mod.rs
kernel/src/server/routes/: memory.rs
kernel/src/workspace/: context.rs  events.rs  mod.rs  persistent.rs  snapshot.rs
render/: App.tsx  index.css  index.html  main.tsx
render/design/: index.ts  primitives.ts  tokens.ts
render/features/browser/: BrowsePane.tsx  BrowserPanel.tsx  index.ts
render/features/changes/: FileChangeList.tsx  index.ts  useFileChanges.ts
render/features/diff/: DiffViewer.tsx  StatBar.tsx  UnifiedDiff.tsx  diffUtils.ts  diffUtils.tsx  index.ts
render/features/editor/: FileEditorPane.tsx  FindBar.tsx  GutterInner.tsx  LiveEditor.tsx  StatusBar.tsx  hljs.ts  index.ts  theme.ts
render/features/files/: CreateInput.tsx  DeleteModal.tsx  FileIcon.tsx  (+4 more)
render/hooks/: index.ts  useBranchPoller.ts  useClickOutside.ts  useDebounce.ts  useDragResize.ts  useGitWatch.ts  useKeyboard.ts  useLocalStorage.ts  useOnline.ts  useTheme.ts  useVersion.ts  useWindowManager.ts
render/lib/: fileFilter.ts  git.ts  index.ts  lang.ts  storage.ts  time.ts
render/sidebar/: CreateWorkspaceModal.tsx  IconPicker.tsx  Sidebar.tsx  WorkspaceContextMenu.tsx  WorkspaceItem.tsx  WorkspaceList.tsx  index.ts  useWorkspaceGitStats.ts
render/types/: events.ts  index.ts  pane.ts  runbox.ts
render/ui/: Avatar.tsx  Badge.tsx  Button.tsx  ContextMenu.tsx  Divider.tsx  EmptyState.tsx  Input.tsx  Kbd.tsx  Modal.tsx  PanelHeader.tsx  ProgressBar.tsx  ResizeHandle.tsx  Scrollable.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  StripIcon.tsx  TabCloseBtn.tsx  Toggle.tsx  Tooltip.tsx  icons.tsx  index.ts
scripts/: build-local.sh  bump-version.sh  check-env.sh  clean.sh  dev.sh  gen-keypair.sh  release.sh  verify-signature.sh
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: bus.rs  db.rs  git_memory.rs  lib.rs  mcp.rs  memory.rs  state.rs
src-tauri/src/agent/: kind.rs  mod.rs
src-tauri/src/browser/: mod.rs
src-tauri/src/commands/: db.rs  fs.rs  memory.rs  pty.rs
src-tauri/src/db/: events.rs  runboxes.rs  schema.rs  sessions.rs
src-tauri/src/git/: commands.rs  diff.rs  mod.rs  repo.rs
src-tauri/src/mcp/: handler.rs  mod.rs  tools.rs
src-tauri/src/memory/: mod.rs  schema.rs  store.rs
src-tauri/src/pty/: detection.rs  mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/routes/: memory.rs  mod.rs  timeline.rs
src-tauri/src/workspace/: context.rs
src/components/: BrowsePanel.tsx  MemoryPanel.tsx  RunPanel.tsx  RunboxManager.tsx
src/core/: BrowsePane.tsx  RunPane.tsx
src/dashboard/: dashboard.tsx
src/panels/: AgentPanel.tsx  BusPanel.tsx  FileChangeList.tsx  MemoryPanel.tsx
src/runbox/: AgentStatusBar.tsx  DiffViewer.tsx  PaneTree.tsx  WorkspaceTabBar.tsx  WorkspaceView.tsx
src/shared/: constants.ts  icons.tsx  types.ts
src/sidebar/: Sidebar.tsx
(+108 files in other folders)
