[package]
name         = "app"
version      = "0.1.0"
description  = "Stackbox"
authors      = ["you"]
edition      = "2021"
rust-version = "1.77.2"

[lib]
name       = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["unstable"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log    = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
reqwest = { version = "0.12", features = ["stream", "cookies", "rustls-tls"] }
log                 = "0.4"
portable-pty        = "0.8"
tokio               = { version = "1", features = ["full"] }
uuid                = { version = "1", features = ["v4"] }
shellexpand         = "3"
dirs                = "5"
urlencoding         = "2"
url                 = "2.5.8"
axum                = "0.7"
tower-http          = { version = "0.6", features = ["cors"] }
lancedb             = "0.21.2"
arrow-array         = "=55.2.0"
arrow-schema        = "=55.2.0"
futures             = "0.3"
rusqlite            = { version = "0.38.0", features = ["bundled"] }
